--- a/00-G1-CS1B-FIA-April-2021/Question_2.Rmd
+++ b/00-G1-CS1B-FIA-April-2021/Question_2.Rmd
@@ -65,8 +65,9 @@ marks given by the two markers.
 ---
 
 One of the marked exam papers is selected at random and the scores given by each of 
-the markers are analysed further by question. Below are the scores given by each of 
-the exam markers for this selected exam paper for each of the 10 questions: 
+the markers are analysed further by question. 
+
+Below are the scores given by each of the exam markers for this selected exam paper for each of the 10 questions: 
 Question 1 2 3 4 5 6 7 8 9 10 
 Marker 1 4 1 5 1 4 6 4 5 3 6 
 Marker 2 3 2 4 0 3 4 2 3 3 6 
@@ -109,7 +110,7 @@ mean of the differences
 
 * P-value is equal to 0.01872
 which is less than the significance level (5%)
-* Therefore reject the null hypothesis
+* Therefore we shall reject the null hypothesis
 * There appears to be difference in the mean scores between the two markers
 
 ---
@@ -123,11 +124,14 @@ marked the same exam paper.
 
 
 (iii)
-𝐻𝐻0 ∶ difference in means is zero 𝑣𝑣𝑣𝑣 𝐻𝐻𝐴𝐴 ∶ difference in means is not zero
+$H_{0)$ ∶ difference in means is zero 𝑣𝑣𝑣𝑣 𝐻𝐻𝐴𝐴 ∶ difference in means is not zero
 
 ```{r}
 t.test(marker_1,marker_2) 
 ```
+
+
+---
 
 Welch Two Sample t-test
 data: marker_1 and marker_2
@@ -141,10 +145,9 @@ mean of x mean of y
 
 ---
 
-P-value is equal to 0.2472
-which is more than the significance level (5%)
-Therefore do not reject the null hypothesis
-There appears to be no difference between the mean scores of the two markers
+* P-value is equal to 0.247 which is more than the significance level (5%)
+* Therefore do not reject the null hypothesis
+* There appears to be no difference between the mean scores of the two markers
 
 ---
 
@@ -181,6 +184,12 @@ barplot(marks_2,xlab = "Exam mark groups", ylab = "Number of exams", main = "Exa
 --- 
 
 2468102.02.53.03.54.0Plot for time and log(caffeinetimelogcaffeine
+
+---
+
+BLANK
+
+---
 # Generally very well answered. 
 # A common error in part (ii) was failing to refer to the strength of the relationship between caffeine and time. 
 # Answers in part (v)(c) were varied, with candidates often giving partial comments.
