--- a/00-M2-CS2B-ASI-July-2022/M2-Question1.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question1.Rmd
@@ -1,30 +1,35 @@
 ---
 title: "Statistics with R"
-subtitle: "Statistical Modelling with R for Actuarial Students"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
       countIncrementalSlides: false
 ---
 
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(knitr)
-library(dplyr)
+#library(dplyr)
 library(janitor)
 
 
 ```
 
-```{css, echo=FALSE}
-pre {
-  background: #ADD8E6;
-  max-width: 100%;
-  overflow-x: scroll;
-}
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_mono_accent_inverse(
+  #base_color = "#3C989E")(
+  base_color = "#1c5253",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
 ```
 
 ***CS2B – Risk Modelling and Survival Analysis ***
@@ -41,16 +46,51 @@ Q. 1) Given below is the PDF h(x) derived from the CDF H(x) of a GEV distributio
 CDF:
 PDF:
 Based on the historical data, the maxima value for three years are 8, 8 and 9 units
-1.  Write a function in R to compute the log-likelihood of the above distribution.
-2.  Use the function in (1. , to find the Maximum Likelihood Estimates (MLE) of the three 
-parameters α, \beta and γ. You can use α = 6, \beta = 4 and γ = 5 as the initial estimates of the 
-parameters. 
+
 ---
-3.   Using the MLE parameters obtained in (2.  above, estimate the probability that maximum 
-claim ‘p’ in any given year is greater than X where X = {10, 15, 20,….100}. (6)
+
+
+The cumulative distribution function (CDF) of the Generalized Extreme Value (GEV) distribution is given by:
+
+```
+H(x) = exp[-{1 + ξ[(x - μ)/σ]}^{-1/ξ}]
+```
+
+where:
+
+* `x`: the random variable
+* `ξ`: the shape parameter
+* `μ`: the location parameter
+* `σ`: the scale parameter
+
+---
+
+
+The GEV distribution is a flexible distribution that can model a wide range of extreme value phenomena. The shape parameter `ξ` determines the tail behavior of the distribution:
+
+* **ξ > 0:** Fréchet distribution (heavy tail)
+* **ξ = 0:** Gumbel distribution (exponential tail)
+* **ξ < 0:** Weibull distribution (bounded tail)
+
+The location parameter `μ` shifts the distribution, and the scale parameter `σ` controls its spread.
+
+
+---
+
+### Exercises
+1.  Write a function in R to compute the log-likelihood of the above distribution.
+
+2.  Use the function in (1. , to find the Maximum Likelihood Estimates (MLE) of the three 
+parameters α, \beta and γ. You can use α = 6, $\beta = 4$ and γ = 5 as the initial estimates of the 
+parameters. 
+
+3.   Using the MLE parameters obtained in part 2 above, estimate the probability that maximum 
+claim ‘p’ in any given year is greater than X where $X = {10, 15, 20,….100}$. 
+
 4.  Plot a curve of the probabilities against the maximum claim in a year and do appropriate 
-labelling. (4)
-5.  Explain the reason associated with the shape of the curve generated in (4. .
+labelling.
+
+5.  Explain the reason associated with the shape of the curve generated in part 4. .
 
 
 ---
@@ -58,21 +98,28 @@ labelling. (4)
 
 options(warn=-1)
 Solution.1
-### Part A 
+### Part A
+
+```{r}
 fMLE <- function(params) {
  f<- 1/params[2]*(1+params[3]*(maxima-params[1])/params[2])^(-1-1/params[3
 ])*exp(- (1+params[3]*(maxima-params[1])/params[2])^(-1/params[3]))
  lnf<-log(f)
  sum(-lnf)
 }
-
+```
 ---
 
 # Part B
+
+```{r}
 maxima <- c(8,8,9)
 alpha<-6; beta<-4; gamma<-5
 p<-c(alpha,beta,gamma)
 fMLE(p)
+```
+
+```{r}
 ## [1] 11.32428
 MLE<-nlm(fMLE,p); 
 MLE
@@ -90,27 +137,41 @@ MLE
 ## 
 ## $iterations
 ## [1] 26
+```
 
 ---
 
-# Part C
+### Part 3
+
+```{r}
 alpha <- MLE$estimate[1]
 beta <- MLE$estimate[2]
 gamma <- MLE$estimate[3]
+
 probs<-c()
+
 for (i in seq(10,100,5)) {
  m<-i
  p <- 1-exp(-(1+gamma*(m-alpha)/beta)^(-1/gamma))
  probs<-c(probs,p)
 }
+
 output <- matrix(NA, nrow = 19, ncol = 2)
 output<-as.data.frame(output)
+```
 
 ---
+
+```{r}
 
 names(output)<-c("X","p")
 output$X<-seq(10,100,5)
 output$p<-probs
+```
+
+---
+
+```{r}
 output
 ## X p
 ## 1 10 0.5446814
@@ -132,14 +193,23 @@ output
 ## 17 90 0.2839340
 ## 18 95 0.2806827
 ## 19 100 0.2776403
-[6]
+
+```
+
+
+---
+
 ### Part D
-plot(output, type = "l", xlab = "X", ylab = "p", main = "Probability of maxim
-um claim exceeding a threshold X")
+
+```{r}
+plot(output, type = "l", xlab = "X", ylab = "p", 
+main = "Probability of maximum claim exceeding a threshold X")
+```
 
 ---
 
 ####  Part E
+
 * If gamma is positive, the distribution is a Freschet distribution
 * The Freschet distribution has a long, power-law tail that slowly converges 
 to 1. 1-CDF slowly converges to zero
