--- a/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question5.Rmd
@@ -1,30 +1,35 @@
 ---
 title: "Statistics with R"
-subtitle: "Statistical Modelling with R for Actuarial Students"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
       countIncrementalSlides: false
 ---
 
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(knitr)
-library(dplyr)
+#library(dplyr)
 library(janitor)
 
 
 ```
 
-```{css, echo=FALSE}
-pre {
-  background: #ADD8E6;
-  max-width: 100%;
-  overflow-x: scroll;
-}
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_mono_accent_inverse(
+  #base_color = "#3C989E")(
+  base_color = "#1c5253",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
 ```
 
 ***CS2B – Risk Modelling and Survival Analysis ***
@@ -47,15 +52,18 @@ using k, σ, µ, L (the lower bound) and U (the upper bound)
 µ = 1.2
 L = 10
 U = ∞
+
 2.  Use the function generated in (1.  to compute the first and second order truncated moments.
+
 3.   Using the function in (1.  or otherwise, compute the first two moments for a non-truncated 
 normal distribution with the same µ and σ.
+
 4.  Compare the results generated in (2.  and (3.   with appropriate reasoning.
 
 ---
 
-Solution 5
-# (Part A
+
+### Exercise 1
 
 ```{r}
 trunc_logN <- function(k, mu, sig, L, U){
@@ -75,7 +83,8 @@ trunc_logN <- function(k, mu, sig, L, U){
 ---
 
 
-# Part B
+### Exercise 2
+
 ```{r}
 trunc_logN(1, 1.2, 0.7, 10,Inf)
 ## [1] "First term: 4.24185214282043"
@@ -93,8 +102,7 @@ trunc_logN(2, 1.2, 0.7, 10,Inf)
 ```
 ---
 
-
-### Part C
+### Exercise 3
 
 *  First moment of a normal distribution = mu = 1.2
 * Second moment of a normal distribution = 0.7^2+1.2^2 = 1.93
@@ -104,14 +112,17 @@ trunc_logN(2, 1.2, 0.7, 10,Inf)
 
 ```{r}
 exp(1.2+0.5*0.7^2)
-## [1] 4.241852
+```
+
+
+```{r}
 exp(2*1.2+0.7^2)*(exp(0.7^2)-1)+(exp(1.2+0.5*0.7^2))^2
 ## [1] 29.37077
 ```
 
 ---
 
-
+```{r}
 trunc_logN(1, 1.2, 0.7, 0,Inf)
 ## [1] "First term: 4.24185214282043"
 ## [1] "Phi(Uk): 1"
@@ -122,9 +133,12 @@ trunc_logN(2, 1.2, 0.7, 0,Inf)
 ## [1] "Phi(Uk): 1"
 ## [1] "Phi(Lk): 0"
 ## [1] "Final Value: 29.3707711132894"
+
+```
+
 ----
 
-#### Part D
+### Exercise 4
 
 * The results are not comparable as (Part B) is associated with Lognormal distribution while (Part C) is associated with normal distribution
 * Assuming (Part C) is log normal distribution
@@ -132,5 +146,11 @@ trunc_logN(2, 1.2, 0.7, 0,Inf)
 * (Part A) Beyond 10, the probabilities are very less and the actual range of valu
 es in excess of 10 is very limited
 * (Part BThe consistency improves because of a narrower range and hence lower variance and second order movement
+
+---
+
+BLANK
+
+---
 
 ---
