--- a/00-M2-CS2B-ASI-July-2022/M2-Question6.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question6.Rmd
@@ -1,30 +1,35 @@
 ---
 title: "Statistics with R"
-subtitle: "Statistical Modelling with R for Actuarial Students"
+subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
+    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
       countIncrementalSlides: false
 ---
 
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(knitr)
-library(dplyr)
+#library(dplyr)
 library(janitor)
 
 
 ```
 
-```{css, echo=FALSE}
-pre {
-  background: #ADD8E6;
-  max-width: 100%;
-  overflow-x: scroll;
-}
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_mono_accent_inverse(
+  #base_color = "#3C989E")(
+  base_color = "#1c5253",
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "300", "300i"),
+  code_font_google   = google_font("Fira Mono")
+)
 ```
 
 ***CS2B – Risk Modelling and Survival Analysis ***
@@ -36,7 +41,10 @@ pre {
 
 ---
 
-Q. 6) Refer to the data set “Cricket.csv”. The data contains the following columns
+Q. 6) Refer to the data set “Cricket.csv”. 
+
+The data contains the following columns
+
 A. Player – Name of the Player
 B. Team – The team he represented in IPL 2022
 C. Init_Group – His initial group (Batsman/ Bowler/ Alrounder)
@@ -47,9 +55,13 @@ G. Economy – Economy as a bowler
 
 ---
 
-Load the data into R and answer the following ### Question s. Name the data frame as “Cricket”.
+### Exercises
+
+Load the data into R and answer the following Questions. Name the data frame as “Cricket”.
+
 1.  What is the average of “Runs” and “Wickets” for three groups of players based on the 
 initial grouping.
+
 2.  Create a copy of “Cricket” and rename it as “Cricket1”. In “Cricket1” keep only the four 
 numerical columns and remove the rest of them.
 
@@ -60,23 +72,27 @@ Cricket1 = as.data.frame(scale (Cricket1))
 ```
 After scaling, set a seed value of 100 using the following code <ttset.seed(100)</tt.
 
---=
+---
+
 3.   Execute k-means clustering algorithm on “Cricket1” and assign it to a variable 
 “clust_Cricket”. Print the cluster means of the generated clusters.
 4.  Add the cluster memberships of each of the players to the original data frame (Cricket) by 
 creating a new column called “***Clust_Membership***”.
+
 5.  Rename the cluster memberships as “Batsman”, “***Bowler***” and “Alrounder” by following 
 the rules given below:
 * The cluster with the highest average runs is renamed as “Batsman”
 * The cluster with the highest average number of wickets is renamed as “***Bowler***”
 * The remaining cluster is renamed as “Alrounder”
+
 6.   Compute the error rate in clustering by comparing the initial grouping with the clusters 
 created.
+
 7.  Comment on the possible reasons for misclassification in the clustering.
 
 ---
 
- [12 Marks]
+
 ### Part A
 
 ```{r}
@@ -84,6 +100,8 @@ Cricket <- read.csv("D:\\IAI ### Question  Paper\\July 2022\\CS2B_Final\\Cricket
 sv")
 
 ```
+
+```{r}
 ### Part A
 runs_avg <- aggregate(Runs~Init_group, data = Cricket, FUN = "mean")
 runs_avg
@@ -91,6 +109,7 @@ runs_avg
 ## 1 Alrounder 143.66667
 ## 2 Batsman 213.91892
 ## 3 Bowler 16.44444
+```
 ---
 
 ```{r}
@@ -123,6 +142,7 @@ clust_Cricket
 
 ```
 
+```{r}
 ## K-means clustering with 3 clusters of sizes 39, 62, 87
 ## 
 ## Cluster means:
@@ -130,7 +150,14 @@ clust_Cricket
 ## 1 -0.4626058 -0.3628813 1.7012202 -0.8011925
 ## 2 1.1193502 1.0687167 -0.6221781 0.8735751
 ## 3 -0.5903229 -0.5989433 -0.3192247 -0.2633925
-## 
+
+```
+
+---
+
+```{r}
+
+
 ## Clustering vector:
 ## [1] 3 2 3 3 3 2 1 3 2 3 2 3 2 3 3 2 2 1 3 3 2 1 3 1 2 3 3 3 3 3 2 3 2 2 
 
@@ -210,3 +237,67 @@ oved significantly
 BLANK
 
 ---
+
+Here's the R code to answer the questions and perform the requested analysis:
+
+```{r}
+# Load the data (assuming the data is in a CSV file named "Cricket.csv")
+Cricket <- read.csv("Cricket.csv")
+
+# 1. Average runs and wickets by group
+group_averages <- aggregate(Runs + Wickets ~ Initial.Grouping, Cricket, FUN = mean)
+print(group_averages)
+
+# 2. Copy and select numerical columns
+Cricket1 <- Cricket[, c(2:5)]
+
+---
+
+# 3. Feature scaling and setting seed
+Cricket1 <- as.data.frame(scale(Cricket1))
+set.seed(100)
+
+# 4. K-means clustering
+clust_Cricket <- kmeans(Cricket1, centers = 3, nstart = 20)
+print(clust_Cricket$centers)  # Print cluster means
+
+
+---
+
+# 5. Add cluster membership and rename
+Cricket$Clust_Membership <- clust_Cricket$cluster
+Cricket$Clust_Membership <- factor(Cricket$Clust_Membership, 
+                                    levels = 1:3, 
+                                    labels = c("Batsman", "Bowler", "Alrounder")[order(mean(Cricket[, 2:3] ), decreasing = c(TRUE, FALSE))])
+
+---
+
+# 6. Error rate calculation (assuming "Initial.Grouping" is the true grouping)
+misclassified <- sum(Cricket$Clust_Membership != Cricket$Initial.Grouping)
+error_rate <- misclassified / nrow(Cricket) * 100
+print(paste("Error rate:", error_rate, "%"))
+
+---
+
+# 7. Reasons for misclassification
+# Possible reasons for misclassification include:
+* **Data limitations:** The data might not perfectly capture the true abilities of players. Factors like playing conditions, team composition, and individual performances on specific days can influence runs and wickets.
+* **Number of clusters:** Using only three clusters might not perfectly represent the diverse skillsets of players. More clusters could lead to more accurate groupings.
+* **Feature selection:** Only runs and wickets were used for clustering.  Additional features like batting average, bowling average, and strike rate could provide more information for differentiating player types.
+* **Choice of distance metric:** K-means uses Euclidean distance. Alternative distance metrics might provide better separation between player types.
+```
+
+---
+
+
+This code performs the following steps:
+
+1. **Loads the data.**
+2. **Calculates the average runs and wickets for each group.**
+3. **Creates a copy of the data with only numerical columns and performs feature scaling.**
+4. **Applies K-means clustering with 3 clusters and prints the cluster means.**
+5. **Adds a new column named "Clust_Membership" to the original data frame and assigns cluster labels based on average runs and wickets.**
+6. **Calculates the error rate by comparing the initial grouping with the generated clusters.**
+7. **Discusses potential reasons for misclassification in the clustering process.**
+
+This approach provides insights into player skillsets, explores potential misclassifications, and highlights the importance of data quality and appropriate feature selection for effective clustering.
