--- a/00-N1-CS1B-FIA-Sept-2022/N1-Question-1.Rmd
+++ b/00-N1-CS1B-FIA-Sept-2022/N1-Question-1.Rmd
@@ -13,8 +13,8 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(knitr)
-library(dplyr)
-library(janitor)
+#library(dplyr)
+#library(janitor)
 
 
 ```
@@ -38,12 +38,14 @@ pre {
 
 ---
 
-1 A Systems Actuary is developing an automated application to replace a 
+A Systems Actuary is developing an automated application to replace a 
 time-consuming manual process. It is assumed that the number of errors, X, under this 
-automated application process follows a Poisson distribution with mean 6. The 
-Actuary wants to perform an analysis on the error rate for the automated process, 
-using the sample mean X. 
+automated application process follows a Poisson distribution with mean 6. 
+
+The Actuary wants to perform an analysis on the error rate for the automated process, using the sample mean X. 
+
 Use the command set.seed(2022) to initialise the random number generator. 
+
 (i) Determine an estimate for the mean and variance of the sample mean X by 
 implementing 5,000 Monte Carlo repetitions, each involving a sample of size 
 150 from the assumed Poisson distribution. You should save the Monte Carlo 
@@ -53,9 +55,11 @@ X values for later use.
 
 The Actuary recalls that a Normal approximation can be used, by referring to the 
 central limit theorem. 
-(ii) Write down the approximate distribution of X, by using the central limit 
+
+B. Write down the approximate distribution of X, by using the central limit 
 theorem.  
-(iii) Compare the approximation in part (2) with your answer to part (1).  
+
+C. Compare the approximation in part (2) with your answer to part (1).  
 The Actuary wants to justify using the Normal approximation by comparing all the 
 quantiles in one go of X and the Normal distribution, using a QQ plot. 
 
@@ -80,9 +84,11 @@ for (i in 1:5000) {
   x_bar[i] <- mean(x)
   } 
 mean(x_bar) 
-````
-> var(x_bar) 
- 0.03958983 
+```
+
+```{r}
+var(x_bar) 
+``` 
 
 
 ---
@@ -97,9 +103,8 @@ approximately:
 
 ### Part (C)
 
-(iii)
-The mean and variance from part (i) are very close to the approximate Normal 
-distribution in part (ii) 
+The mean and variance from part A are very close to the approximate Normal 
+distribution in part B.
 
 ---
 
@@ -138,3 +143,7 @@ reasonable comments. A common error in part (iv) was using random values rather 
 the quantiles of the distribution to produce the plot.
 In part (v), a relatively small proportion of candidates were able to identify and interpret 
 differences in the tails.
+---
+
+
+---
